test/corpus/declarations.txt
===============================================================================
Variable Declaration
===============================================================================

var foo;
var bar = 1;

-------------------------------------------------------------------------------

(program
  (variable_declaration
    (identifier))
  (variable_declaration
    (identifier)
    (number)))
